tests/NormalTests/paczka2/big_fuzzy/26569297.err
Error in line 10: k1Jx S318 29,4
Error in line 15: JaØ S318 12,8
Error in line 9: rTdwGAF5 A891 14,6
Error in line 6: A891 S941 279,9
Error in line 11: k1Jx S45 74,5
Error in line 21: TFYMpasNg85 A891 22,4
Error in line 27: k1Jx S941 70,5
Error in line 37: JaQ S318 2,4
Error in line 49: A891 A891 92,58
Error in line 50: TFYMpasNg85 A891 31,7
Error in line 45: A891 S318 20,0
Error in line 55: A891 A891 451,9
Error in line 52: TFYMpasNg85 S45 30,1
Error in line 71: GDH S941 6,1
Error in line 70: JaQ S318 67,0
Error in line 95: TFYMpasNg85 S45 74,2
Error in line 99: TFYMpasNg85 S318 29,1
Error in line 103: rTdwGAF5 S318 9,5
Error in line 107: rTdwGAF5 S941 53,0
Error in line 98: A891 S318 56,3
Error in line 111: rTdwGAF5 S45 20,5
Error in line 112: JaQ A891 15,3
Error in line 114: k1Jx S45 372,9
Error in line 129: GDH A891 94,0
Error in line 139: GDH S318 46,2
Error in line 153: adkvmKVev S318 11,0
Error in line 154: adkvmKVev S941 62,1
Error in line 152: A891 S45 62,8
Error in line 173: JaQ S318 3,9
Error in line 177: JaQ S45 8,0
Error in line 178: JaQ S941 31,7
Error in line 186: A891 S941 35,5
Error in line 191: GDH S941 30,0
Error in line 200: GDH S45 77,9
Error in line 205: JaQ A91 20,2
Error in line 201: adkvmKVev S318 60,4
Error in line 208: adkvmKVev S941 48,5
Error in line 213: TFYMpasNg85 A891 69,4
Error in line 223: TFYMpasNg85 S45 81,4
Error in line 232: JaQ S941 71,0
Error in line 233: TFYMpasNg85 S941 24,4
